--- a/pdf_results/templates/pdf_results/pdf.html
+++ b/pdf_results/templates/pdf_results/pdf.html
@@ -1,11 +1,8 @@
 {% extends 'layouts/base.html' %}
 {% block body %}
 <h1>User detail PDF</h1>
-<div >
-    <p>First Name: {{first_name}}</p>
-    <p>Last Name: {{last_name}}</p>
-    <p>Local Address: {{local_address}}</p>
-    <p>Permanent Address: {{permanent_address}}</p>
+<div>
+    {{myvar}}
 </div>
 <h2> User uploaded Images </h2>
 {% for user_image in  user_images %}
